2000-05-14  Karl Eichwalder  <ke@suse.de>

	* gen_util/mailcheck.soundlist (description): Add de.

2000-04-30 Dan Mueth <d-mueth@uchicago.edu>

	* gen_util/help/C/*: Fixed broken PNG images which Netscape
	can't render.  Fixed "inluding" and "Cancel" typos. Changed
	DTD to 1.1.

Sat Apr 29 19:35:19 2000  George Lebl <jirka@5z.com>

	* gen_util/mailcheck.c: fix scaling to different panel sizes.

2000-04-26  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* gen_util/email-tiny.png: added a new animation for tiny
	panel (by Ian Campbell <ijc25@cam.ac.uk>).
	* gen_util/Makefile.am: install email-tiny.png

2000-04-25  Martin Baulig  <baulig@suse.de>

	* gen_util/help/de/clock.sgml: Added german translation of
	the clockapplet.

2000-04-24  Fatih Demir	<kabalak@gmx.net>
	
	* applet-dirs/Utility.directory : Fixed an error in [tr] .

2000-04-18  Eric Baudais  <baudais@okstate.edu>

	* gen_util/mailcheck.c: Fixed docs linking.

2000-04-17  Eric Baudais  <baudais@okstate.edu>

	* gen_util/clock.c: Fixed a problem with the help button.
	* gen_util/help/C/printer/*png: Fixed the pics.

2000-04-17  Karl EICHWALDER  <ke@suse.de>

	* applet-dirs/Monitors.directory (Comment): Improve.  Adjust
	[de].

2000-04-17  Eric Baudais  <baudais@okstate.edu>

	* gen_util/clock.c: Added help.
	* gen_util/mailcheck.c: Revised help.
	* gen_util/printer.c: Revised help.
	* gen_util/help/C/clock/*: Added docs.
	* gen_util/help/C/mailcheck/*: Revised docs.
	* gen_util/help/C/printer/*: Revised docs.
	* gen_util/help/C/Makefile.am: Installed help.

Sun Apr 16 04:48:30 2000  George Lebl <jirka@5z.com>

	* Makefile.am: re-added the subdirs that got deleted somehow

2000-04-15  Fatih Demir	<kabalak@gmx.net>

	* gen_util/*.desktop : Added [tr] sections ..
	
	* gen_util/mailcheck.soundlist : Added [tr] sections ..

	* applet-dirs/*.directory : Added [tr] sections ..

2000-04-12  Karl EICHWALDER  <ke@suse.de>

	* gen_util/mailcheck.soundlist (description): Add `de'.
